# Livraria_Django

./: .env_exemplo  .env_exemplo.txt  README.md  limparBanco.py  livraria.json  livraria_bkp.json  pyproject.toml  requirements.txt
config/: settings.py  urls.py
livraria/: admin.py  apps.py  models.py  serializers.py  views.py
livraria/migrations/: 0001_initial.py  0002_editora.py  0002_livro_capa.py  0003_alter_autor_email.py  0003_autor_livro.py  0004_alter_livro_options.py  0004_compra.py  0005_itenscompra.py  0005_livro_autores.py  0006_itenscompra_preco_item.py  0007_compra_data_alter_compra_status_alter_compra_usuario.py  0008_compra_tipo_pagamento_alter_compra_status.py
livraria/models/: __init__.py  autor.py  categoria.py  compra.py  editora.py  livro.py
livraria/serializers/: __init__.py  autor.py  categoria.py  compra.py  editora.py  livro.py
livraria/views/: autor.py  categoria.py  compra.py  editora.py  livro.py
uploader/migrations/: 0001_initial.py
usuario/: admin.py  models.py
usuario/migrations/: 0001_initial.py  0002_usuario_foto.py  0003_remove_usuario_foto.py  0004_usuario_foto.py  0005_usuario_tipo_usuario.py
utils/: files.py
