[project]
name = ""
version = ""
description = ""
authors = [
    {name = "AnthonyLoche", email = "anthonylocheifc@gmail.com"},
]
dependencies = [
    "django>=5.0.3",
    "djangorestframework>=3.15.0",
    "django-cors-headers>=4.3.1",
    "dotenv>=0.0.5",
    "djangorestframework-simplejwt>=5.3.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

